dark mode color fix

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -85,8 +85,10 @@ body {
 
 a {
   color: var(--link-color);
-
   &:visited {
+    color: var(--link-color);
+  }
+  &:hover {
     color: var(--link-color);
   }
 }
